# ComfyUI-Liebs-Title

./: README.md  __init__.py  liebs_title_var.py  pyproject.toml
js/: title-extension.js
